--- a/app.less
+++ b/app.less
@@ -1,3 +1,6 @@
+@bookmark-padding: 5px;
+
+
 body {
     font-family: 'PT Sans', arial;
 }
@@ -10,15 +13,21 @@ body {
 .bookmark {
     float: left;
     overflow: hidden;
-    padding: 5px;
+    padding-top: @bookmark-padding;
+    padding-bottom: @bookmark-padding;
+    padding-right: @bookmark-padding;
+    padding-left: @bookmark-padding + @bookmark-padding + 16px;
     width: 180px;
     height: 40px;
     margin-right: 5px;
     margin-bottom: 5px;
-    background: #f7f7f9;
+    background-color: #f7f7f9;
+    background-repeat: no-repeat;
+    background-position-x: @bookmark-padding;
+    background-position-y: @bookmark-padding;
     color: #000;
 }
 
 .bookmark:hover {
-    background: #c7e7f9;
+    background-color: #c7e7f9;
 }
