Remove bootstrap dependency

--- a/app.less
+++ b/app.less
@@ -2,7 +2,13 @@
 
 
 body {
+    font-size: 10.5pt;
     font-family: 'PT Sans', arial;
+}
+
+.container {
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .folder {
@@ -29,5 +35,6 @@ body {
 }
 
 .bookmark:hover {
+    max-height: auto;
     background-color: #c7e7f9;
 }
