--- a/app.less
+++ b/app.less
@@ -1,4 +1,27 @@
+@bookmark-margin: 5px;
 @bookmark-padding: 5px;
+@bookmark-height: 48px;
+@bookmark-width: 160px;
+
+@container-padding: 3em;
+
+.bookmark-tile() {
+    float: left;
+    overflow: hidden;
+    width: @bookmark-width;
+    height: @bookmark-height;
+    margin-right: @bookmark-margin;
+    margin-bottom: @bookmark-margin;
+}
+
+.bookmark-box() {
+    position: relative;
+    height: 100%;
+    padding-top: @bookmark-padding;
+    padding-bottom: @bookmark-padding;
+    padding-right: @bookmark-padding;
+    padding-left: @bookmark-padding;
+}
 
 
 body {
@@ -7,34 +30,42 @@ body {
 }
 
 .container {
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-left: @container-padding;
+    margin-right: @container-padding;
 }
 
 .folder {
+    .bookmark-tile;
     clear: both;
-    padding: 5px;
+
+    >div {
+        .bookmark-box;
+        color: #888;
+        font-size: 120%;
+    }
 }
 
 .bookmark {
-    float: left;
-    overflow: hidden;
-    padding-top: @bookmark-padding;
-    padding-bottom: @bookmark-padding;
-    padding-right: @bookmark-padding;
-    padding-left: @bookmark-padding + @bookmark-padding + 16px;
-    width: 180px;
-    height: 40px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    background-color: #f7f7f9;
-    background-repeat: no-repeat;
-    background-position-x: @bookmark-padding;
-    background-position-y: @bookmark-padding;
-    color: #000;
-}
+    .bookmark-tile;
 
-.bookmark:hover {
-    max-height: auto;
-    background-color: #c7e7f9;
+    >div {
+        .bookmark-box;
+        padding-left: @bookmark-padding + @bookmark-padding + 16px;
+        background-color: #eee;
+        background-repeat: no-repeat;
+        background-position-x: @bookmark-padding;
+        background-position-y: @bookmark-padding;
+        color: #000;
+
+        &:hover {
+            background-color: #fff;
+            transition: background-color 0.1s;
+        }
+    }
+
+    &.topSite {
+        >div {
+            font-weight: bold;
+        }
+    }
 }
