--- a/src/main/less/app.less
+++ b/src/main/less/app.less
@@ -3,7 +3,7 @@
 @bookmark-height: 48px;
 @bookmark-width: 160px;
 
-@container-padding: 3em;
+@container-padding: 2em;
 
 .bookmark-tile() {
     float: left;
@@ -27,6 +27,7 @@
 body {
     font-size: 10.5pt;
     font-family: 'PT Sans', arial;
+    background-color: #e9eaed;
 }
 
 .container {
@@ -37,30 +38,33 @@ body {
 .folder {
     .bookmark-tile;
     clear: both;
+    border: 1px solid transparent;
 
     >div {
         .bookmark-box;
-        color: #888;
+        color: #444;
         font-size: 120%;
     }
 }
 
 .bookmark {
     .bookmark-tile;
+    border: 1px solid;
+    border-color: #eee #ddd #ddd;
+    border-radius: 3px;
 
     >div {
         .bookmark-box;
         padding-left: @bookmark-padding + @bookmark-padding + 16px;
-        background-color: #eee;
+        background-color: #fff;
         background-repeat: no-repeat;
         background-position-x: @bookmark-padding;
         background-position-y: @bookmark-padding;
         color: #000;
+    }
 
-        &:hover {
-            background-color: #fff;
-            transition: background-color 0.1s;
-        }
+    &:hover {
+        box-shadow: 0 0 (@bookmark-margin * 2) #9ad;
     }
 
     &.topSite {
