Fix font family

--- a/src/main/less/app.less
+++ b/src/main/less/app.less
@@ -27,7 +27,7 @@
 
 body {
   font-size: 10.5pt;
-  font-family: 'PT Sans', arial;
+  font-family: 'PT Sans', 'Trebuchet MS', sans-serif;
   background-color: #e9eaed;
 }
 
