--- a/src/main/less/app.less
+++ b/src/main/less/app.less
@@ -36,6 +36,8 @@
 
 
 body {
+  margin: 0;
+  padding: 0;
   font-size: 10.5pt;
   font-family: 'PT Sans', 'Trebuchet MS', sans-serif;
   background-color: #e9eaed;
@@ -47,6 +49,8 @@ a {
 }
 
 .container {
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-left: 2em;
   margin-right: 2em;
 }
@@ -104,4 +108,16 @@ a {
       .site-tile-inner-with-icon(5px, 16px);
     }
   }
+}
+
+.network-offline {
+  z-index: 20;
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  padding: 15px;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  box-shadow: 0 0 5px #444;
 }
