Remove top-sites heading and add footer

--- a/app/main.less
+++ b/app/main.less
@@ -40,7 +40,6 @@ a {
 
 .BookmarkFolderHeading,
 .BookmarkItem,
-.TopSitesHeading,
 .TopSitesItem {
   float: left;
   overflow: hidden;
@@ -57,7 +56,6 @@ a {
   margin-bottom: @separator-margin;
 }
 
-.TopSitesHeading,
 .TopSitesItem {
   width: @topsite-tile-width;
   height: @topsite-tile-height;
@@ -65,8 +63,7 @@ a {
   margin-bottom: @separator-margin;
 }
 
-.BookmarkFolderHeadingTitle,
-.TopSitesHeadingTitle {
+.BookmarkFolderHeadingTitle {
   color: #444;
   font-size: 120%;
 }
@@ -116,6 +113,13 @@ a {
   display: block;
 }
 
+.footer {
+  margin-top: @separator-margin;
+  margin-bottom: @separator-margin;
+  text-align: center;
+  color: #444;
+  text-shadow: 1px 1px 1px #fff;
+}
 
 
 // FIXME
