Show tip on focus in top sites

--- a/app/main.less
+++ b/app/main.less
@@ -112,6 +112,10 @@ a {
   display: block;
 }
 
+.TopSitesItem:focus .TopSitesItemTip {
+  display: block;
+}
+
 .footer {
   margin-top: @separator-margin;
   margin-bottom: @separator-margin;
