Add preferences to switch theme

--- a/app/main.less
+++ b/app/main.less
@@ -126,6 +126,14 @@ a {
   box-shadow: 0 0 5px #444;
 }
 
+.Preferences {
+  margin-top: @separator-margin;
+  margin-bottom: @separator-margin;
+  text-align: center;
+  color: #444;
+  text-shadow: 1px 1px 1px #fff;
+}
+
 .footer {
   margin-top: @separator-margin;
   margin-bottom: @separator-margin;
