Use highlight for hover

--- a/app/theme/_base.less
+++ b/app/theme/_base.less
@@ -83,7 +83,7 @@ a {
   border-color: @color-folder-item-border;
   border-radius: 3px;
   &:hover {
-    box-shadow: 0 0 10px @color-folder-item-hover;
+    background-color: @color-folder-item-hover;
   }
 }
 
@@ -127,7 +127,6 @@ a {
   border-radius: 3px;
   color: @color-tip-foreground;
   background-color: @color-tip-background;
-  box-shadow: 0 0 5px @color-tip-shadow;
 }
 
 .NetworkStatus {
