--- a/app/theme/dark.less
+++ b/app/theme/dark.less
@@ -5,14 +5,13 @@
 @color-folder-title: #ccc;
 @color-folder-item-background: #363636;
 @color-folder-item-border: transparent;
-@color-folder-item-hover: #aaa;
+@color-folder-item-hover: #555;
 
 @color-footer-title: #ccc;
 @color-footer-title-shadow: #888;
 
 @color-tip-background: rgba(0, 0, 0, 0.7);
 @color-tip-foreground: #eee;
-@color-tip-shadow: transparent;
 
 
 @import '_base.less';
