--- a/app/theme/light.less
+++ b/app/theme/light.less
@@ -5,14 +5,13 @@
 @color-folder-title: #444;
 @color-folder-item-background: #fff;
 @color-folder-item-border: #eee #ddd #ddd;
-@color-folder-item-hover: #9ad;
+@color-folder-item-hover: #f9fafd;
 
 @color-footer-title: #444;
 @color-footer-title-shadow: #fff;
 
 @color-tip-background: rgba(0, 0, 0, 0.8);
 @color-tip-foreground: #fff;
-@color-tip-shadow: #444;
 
 
 @import '_base.less';
