Refactor less scripts

--- a/app/theme/_base.less
+++ b/app/theme/_base.less
@@ -15,163 +15,7 @@ a {
   clear: both;
 }
 
-
-@size-bookmark-width: 160px;
-@size-bookmark-height: 48px;
-@size-topsite-width: 48px;
-@size-topsite-height: 48px;
-@size-topsite-tip: 160px;
-
-@size-folder-margin-x: 15px;
-@size-folder-margin-y: 5px;
-@size-folder-padding-x: 15px;
-@size-folder-padding-y: 5px;
-@size-folder-item-margin: 5px;
-@size-folder-item-padding: 5px;
-
-@size-footer-margin-y: 15px;
-
-@size-preference-item-margin: @size-folder-item-margin;
-@size-preference-item-padding: 10px;
-
-@size-tip-padding: 5px;
-
-@size-icon: 16px;
-
-@color-preference-item-background: @color-folder-item-background;
-@color-preference-item-hover: @color-folder-item-hover;
-
-
-.BookmarkFolder,
-.TopSites {
-  background-color: @color-folder-background;
-  border-radius: 3px;
-  margin-top: @size-folder-margin-y;
-  margin-bottom: @size-folder-margin-y;
-  margin-left: @size-folder-margin-x;
-  margin-right: @size-folder-margin-x;
-  padding-top: @size-folder-padding-y;
-  padding-bottom: @size-folder-padding-y - @size-folder-item-margin;
-  padding-left: @size-folder-padding-x;
-  padding-right: @size-folder-padding-x - @size-folder-item-margin;
-}
-
-.BookmarkFolderHeading,
-.BookmarkItem,
-.TopSitesItem {
-  float: left;
-  overflow: hidden;
-  border-width: 1px;
-  border-style: solid;
-  border-color: transparent;
-  margin-bottom: @size-folder-item-margin;
-  margin-right: @size-folder-item-margin;
-}
-
-.BookmarkFolderHeading,
-.BookmarkItem {
-  width: @size-bookmark-width;
-  height: @size-bookmark-height;
-}
-
-.TopSitesItem {
-  width: @size-topsite-width;
-  height: @size-topsite-height;
-}
-
-.BookmarkFolderHeadingTitle {
-  color: @color-folder-title;
-  font-size: 120%;
-}
-
-.BookmarkItem,
-.TopSitesItem {
-  background-color: @color-folder-item-background;
-  border-color: @color-folder-item-border;
-  border-radius: 3px;
-  &:hover {
-    background-color: @color-folder-item-hover;
-  }
-}
-
-.BookmarkItemBody,
-.TopSitesItemBody {
-  padding: @size-folder-item-padding;
-  min-height: @size-topsite-height;
-  padding-left: @size-folder-item-padding * 2 + @size-icon;
-  background-repeat: no-repeat;
-  // background-image should be given in HTML
-}
-
-.BookmarkItemBody {
-  background-position-x: @size-folder-item-padding;
-  background-position-y: @size-folder-item-padding;
-}
-
-.TopSitesItemBody {
-  background-position-x: (@size-topsite-width - @size-icon) / 2;
-  background-position-y: (@size-topsite-height - @size-icon) / 2;
-}
-
-.TopSitesItemTip {
-  position: absolute;
-  z-index: 10;
-  max-width: @size-topsite-tip;
-  display: none;
-}
-
-.TopSitesItem:hover .TopSitesItemTip {
-  display: block;
-}
-
-.TopSitesItem:focus .TopSitesItemTip {
-  display: block;
-}
-
-.TopSitesItemTip,
-.NetworkStatus {
-  padding: @size-tip-padding;
-  border-radius: 3px;
-  color: @color-tip-foreground;
-  background-color: @color-tip-background;
-}
-
-.NetworkStatus {
-  z-index: 20;
-  position: fixed;
-  top: 20px;
-  right: 20px;
-}
-
-.Preferences,
-.Footer {
-  margin-top: @size-footer-margin-y;
-  margin-bottom: @size-footer-margin-y;
-  text-align: center;
-  p {
-    color: @color-footer-title;
-    text-shadow: 1px 1px 1px @color-footer-title-shadow;
-  }
-}
-
-.Themes {
-  label {
-    font: inherit;
-    color: inherit;
-    background-color: @color-preference-item-background;
-    margin: @size-preference-item-margin;
-    padding: @size-preference-item-padding;
-    border-radius: 3px;
-    border: none;
-    &:hover {
-      background-color: @color-preference-item-hover;
-    }
-    input {
-      margin-right: @size-preference-item-padding;
-      &:checked + span {
-        font-weight: bold;
-      }
-    }
-  }
-}
-
+@import '_bookmarks.less';
+@import '_topsites.less';
+@import '_status.less';
+@import '_preferences.less';
