Fix hover style was not extended

--- a/app/theme/_bookmarks.less
+++ b/app/theme/_bookmarks.less
@@ -11,6 +11,8 @@
   height: @size-bookmark-height;
 }
 
+.BookmarkItem:hover:extend(.AbstractFolderItemClickable:hover) {}
+
 .BookmarkFolderHeading:extend(.AbstractFolderItem) {
   width: @size-bookmark-width;
   height: @size-bookmark-height;
