--- a/app/theme/_topsites.less
+++ b/app/theme/_topsites.less
@@ -12,6 +12,8 @@
   height: @size-topsite-height;
 }
 
+.TopSitesItem:hover:extend(.AbstractFolderItemClickable:hover) {}
+
 .TopSitesItemBody:extend(.AbstractFolderItemBody) {
   background-position-x: (@size-topsite-width - @size-icon) / 2;
   background-position-y: (@size-topsite-height - @size-icon) / 2;
