--- a/app/theme/dark.less
+++ b/app/theme/dark.less
@@ -10,9 +10,8 @@
 @color-footer-title: #ccc;
 @color-footer-title-shadow: #888;
 
-@color-tip-background: rgba(0, 0, 0, 0.7);
+@color-tip-background: fade(#000, 70%);
 @color-tip-foreground: #eee;
 
 
 @import '_base.less';
-
