--- a/app/theme/light.less
+++ b/app/theme/light.less
@@ -10,9 +10,8 @@
 @color-footer-title: #444;
 @color-footer-title-shadow: #fff;
 
-@color-tip-background: rgba(0, 0, 0, 0.8);
+@color-tip-background: fade(#000, 80%);
 @color-tip-foreground: #fff;
 
 
 @import '_base.less';
-
