--- a/app/theme/dark.less
+++ b/app/theme/dark.less
@@ -1,17 +1,2 @@
-@color-background: #222;
-@color-foreground: #eee;
-
-@color-folder-background: #333;
-@color-folder-title: #ccc;
-@color-folder-item-background: #363636;
-@color-folder-item-border: transparent;
-@color-folder-item-hover: #555;
-
-@color-footer-title: #ccc;
-@color-footer-title-shadow: #888;
-
-@color-tip-background: fade(#000, 70%);
-@color-tip-foreground: #eee;
-
-
+@theme: 'dark';
 @import '_base.less';
