--- a/app/theme/light.less
+++ b/app/theme/light.less
@@ -1,17 +1,2 @@
-@color-background: #b9babd;
-@color-foreground: #000;
-
-@color-folder-background: #e9eaed;
-@color-folder-title: #444;
-@color-folder-item-background: #fff;
-@color-folder-item-border: #eee #ddd #ddd;
-@color-folder-item-hover: #f9fafd;
-
-@color-footer-title: #444;
-@color-footer-title-shadow: #fff;
-
-@color-tip-background: fade(#000, 80%);
-@color-tip-foreground: #fff;
-
-
+@theme: 'light';
 @import '_base.less';
