Fade out tip on mouse over

--- a/app/theme/_tip.less
+++ b/app/theme/_tip.less
@@ -1,7 +1,8 @@
-@size-tip-padding: 5px;
-
 .AbstractTip {
-  padding: @size-tip-padding;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   border-radius: 3px;
 
   & when(@theme = 'light') {
