--- a/app/theme/_topsites.less
+++ b/app/theme/_topsites.less
@@ -21,7 +21,7 @@
   background-position-y: (@size-topsite-height - @size-icon) / 2;
 }
 
-.TopSitesItemTip:extend(.AbstractTip) {
+.TopSitesItemTip {
   position: absolute;
   z-index: 10;
   max-width: @size-topsite-tip;
@@ -35,4 +35,8 @@
     opacity: 0;
     transition: opacity 0.25s linear;
   }
+}
+
+.TopSitesItemTipBody:extend(.AbstractTip) {
+  margin-top: @size-folder-padding-y;
 }
