Improve feedback of item hover

--- a/app/theme/_folder.less
+++ b/app/theme/_folder.less
@@ -45,7 +45,7 @@
 }
 
 .AbstractFolderItemButton:hover {
-  & when(@theme = 'light') { background-color: #f9fafd; }
+  & when(@theme = 'light') { background-color: average(#fff, #e9eaed); }
   & when(@theme = 'dark')  { background-color: #555; }
 }
 
